why choose us section added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
         </div>
     </section>
 
+    <!-- Why Choose Us Section -->
+    <section class="why-choose-us">
+        <div class="container">
+            <h2 class="section-title animate-fade-up">Why Choose Infinity Bookstore?</h2>
+            <div class="reasons-grid">
+                <div class="reason-card animate-slide-left">
+                    <h3>Curated Collection</h3>
+                    <p>We handpick books across all genres for readers of every taste and age.</p>
+                </div>
+                <div class="reason-card animate-fade-in">
+                    <h3>Fast & Reliable Delivery</h3>
+                    <p>Get your favorite books delivered at your doorstep in no time.</p>
+                </div>
+                <div class="reason-card animate-slide-right">
+                    <h3>Reader-Friendly Support</h3>
+                    <p>Our team is here 24/7 to help with orders, recommendations, and more!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
@@ -140,6 +161,11 @@
         document.getElementById("mobile-year-range").textContent = yearRange;
 
     </script>
+
+    <p>This is a fully responsive HTML structure for an online bookstore landing page named Infinity Bookstore. It
+        includes a navigation bar, hero section, book categories, featured books with images, customer reviews, a
+        contact form, and footer. Each section is well-organized, clean, and mobile-friendly, using semantic HTML
+        elements.</p>
 
 </body>
 
