--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinity Bookstore</title>
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -161,11 +168,6 @@
         document.getElementById("mobile-year-range").textContent = yearRange;
 
     </script>
-
-    <p>This is a fully responsive HTML structure for an online bookstore landing page named Infinity Bookstore. It
-        includes a navigation bar, hero section, book categories, featured books with images, customer reviews, a
-        contact form, and footer. Each section is well-organized, clean, and mobile-friendly, using semantic HTML
-        elements.</p>
 
 </body>
 
