--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./infinity-book-logo-icon.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
